--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(142deg, #9861c2, #5cc0de);
+    /* background-image: linear-gradient(142deg, #9861c2, #5cc0de); */
     font-family: "Lato", sans-serif;
     height: 100vh;
     display: flex;
@@ -42,11 +42,11 @@ body{
     -webkit-appearance: none;
 }
 .input{
-    border-color: #9861c2;
+    border-color: #333;
     box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.25);
 }
 
-.btn{
+/* .btn{
     font-family: "Lato", sans-serif;
     min-width: 400px;
     display: inline-block;
@@ -65,6 +65,6 @@ body{
 }
 .btn-primary{
     color: #fff;
-    background-color: #9861c2;
-    border-color: #9861c2;
-}
+    background-color: #222;
+    border-color: #333;
+} */
